--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,12 @@
             android:text="@string/string0" />
 
         <Button
+            android:id="@+id/btn_db"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string8" />
+
+        <Button
             android:id="@+id/btn_task"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
