--- a/app/src/main/res/layout/fragment_base.xml
+++ b/app/src/main/res/layout/fragment_base.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yihukurama.mvc4a.View.fragment.BaseFragment">
+    tools:context="com.yihukurama.mvc4a.view.fragment.BaseFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
