--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/string3" />
-
+        <Button
+            android:id="@+id/btn_web"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="加载网页" />
 
     </LinearLayout>
 
