--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="加载网页" />
-
+        <Button
+            android:id="@+id/btn_pic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="imageLoader例子" />
     </LinearLayout>
 
 </ScrollView>
